<resources>
    <string name="app_name">High5 For Drivers</string>
    <string name="google_maps_key_debug">AIzaSyBXsHrxEjAcuFm6QOSQzva-g3UZgKNejIA</string>
    <string name="google_maps_key_live">AIzaSyB--NHaRD1RH7OuP7u87SDhyB_2w1FQ6Qo</string>
    <string name="map_address_api_key">AIzaSyBXsHrxEjAcuFm6QOSQzva-g3UZgKNejIA</string>

    <!-- Common string-->

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="dialog_error_message">An error has occurred, please try again later</string>
    <string name="cancel">Cancel</string>
    <string name="Cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="back">Back</string>
    <string name="message">Message</string>
    <string name="alert">Alert</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gps_not_enabled">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>

    <string name="signup_txt_terms_of_use">I agree to <b><u>Terms of Use</u></b></string>
    <string name="signup_disclaimer">Disclaimer: The app depicts sale of Medical Marijuana only</string>
    <string name="signup_txt_privacy_policy">I agree to <b><u>Privacy Policy</u></b></string>
    <string name="signup_txt_big">Enter your personal details and\nwe\'ll send a verification link to your mobile phone.</string>
    <string name="signup_txt_small">Let\'s get you set up</string>
    <string name="signup_txt_terms">I agree to join in the following collectives</string>
    <string name="hint_username"><font size="14">Email id</font></string>
    <string name="hint_name"><font size="14">Name</font></string>
    <string name="hint_email_address"><font size="14">Email address</font></string>
    <string name="hint_zip"><font size="14">Zip code</font></string>
    <string name="hint_mobilenumber"><font size="14">Mobile number</font></string>
    <string name="hint_password"><font size="14">Password</font></string>
    <string name="verification_txt_big">Please check your email account\nto get verification code</string>
    <string name="verification_txt_small">Enter your verification code</string>
    <string name="verification_txt_edittext"><font size="14">Verification code</font></string>

    <string name="internet_error">No internet connection.</string>
    <string name="name_error">Enter name</string>
    <string name="email_or_mobile_error">Enter email or mobile</string>
    <string name="password_error">Enter password</string>
    <string name="zipcode_error">Enter zipcode</string>
    <string name="zipcode_error_length">Enter valid zipcode</string>
    <string name="password_length_error">Password atleast 8 character</string>
    <string name="email_valid_error">Please enter valid email address</string>
    <string name="mobile_valid_error">Please enter valid mobile number</string>
    <string name="term_condition_error">Please select terms &amp; condition.</string>
    <string name="privacy_policy_error">Please select privacy &amp; policy.</string>

    <!--IDENTIFICATION SCREEN TEXT-->
    <string name="identification_provide">PROVIDE IDENTIFICATION</string>
    <string name="identification_great">Great! next we need to\nsee some ID.</string>
    <string name="identification_add">ADD IDENTIFICATION</string>
    <string name="identification_txt1">We need to verify your identity. Please snap a photo of your\nstate-issued ID.</string>
    <string name="identification_txt2">Valid IDs include: Drivers License, US Passport,\nOr a state-issued Photo ID.</string>
    <string name="identification_medicalcard">PROVIDE MEDICAL CARD</string>
    <string name="identification_marijuana">Do you have a medical\nmarijuana card?</string>
    <string name="identification_upload">UPLOAD RECOMMENDATION</string>
    <string name="identification_txt3">To Comply with state law, please provide a valid medical\nmarijuana recommendation letter or ID card.</string>

    <string name="product_details">These Tangrine Gummies are seriously delicious. One\nbox contains six 10mg doses in Sativa. Valhalla gum-\nmies are strain specific (stamped right on the back of\nthe box because we know you want to know.) These\nhandcrafted gummies are gluten-free.</string>


    <!--Car Details Screen-->
    <string name="car_details_provider">PROVIDE YOUR CAR DETAILS</string>
    <string name="car_details_need">We need to see car number\nand other details</string>
    <string name="car_details_need_to_verify">We need to verify your car details.\nUpload your car documents</string>
    <string name="car_details_number">Car Number</string>
    <string name="car_details_number_error">Please enter car number</string>
    <string name="car_details_brand">Car Brand Name</string>
    <string name="car_details_brand_error">Please enter car brand name</string>
    <string name="car_details_add_verification">ADD VERIFICATION</string>


    <!-- Verify Process Screen-->

    <string name="verify_process">VERIFY PROCESS</string>
    <string name="verify_process_details">We will verify your personal details and documents\nonce completed that process then you can access this \napplication.</string>
    <string name="verify_process_admin">CONTACT TO ADMIN</string>

    <!--Progress popup-->

    <string name="progress_accept_order_time">You have only 60 seconds\nto accepts this order.</string>

    <!-- Add other Address-->
    <string name="hint_Phone_number"><font size="14">Phone number</font></string>
    <string name="hint_state"><font size="14">State</font></string>
    <string name="hint_country"><font size="14">Country</font></string>
    <string name="hint_city"><font size="14">City</font></string>
    <string name="hint_zipcode"><font size="14">Zipcode</font></string>
    <string name="hint_street_add"><font size="14">Street address</font></string>
    <string name="hint_fname"><font size="14">First name</font></string>
    <string name="hint_lname"><font size="14">Lase name</font></string>
    <string name="title_activity_maps">Map</string>

    <integer name="page_change_anim_time">300</integer>

    <string name="profile">Profile</string>
</resources>
