<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imgtopleave"
    android:orientation="vertical">

    <com.weedshop.driver.SegmentedProgressBar
        android:id="@+id/segmented_progressbar"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent" />

    <ImageView
        android:id="@+id/btnlogout"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logoutbutton"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/segmented_progressbar"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/car_details_provider"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/car_details_need"
            android:textColor="#2DCE9C"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:src="@drawable/car" />

        <EditText
            android:id="@+id/et_car_no"
            android:layout_width="match_parent"
            android:layout_height="@dimen/signin_edittext_height"
            android:layout_marginLeft="@dimen/edittext_padding_left"
            android:layout_marginRight="@dimen/edittext_padding_left"
            android:layout_marginTop="35dp"
            android:background="@drawable/round_corner"
            android:drawableLeft="@drawable/car_number"
            android:drawablePadding="5dp"
            android:hint="@string/car_details_number"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/et_brand"
            android:layout_width="match_parent"
            android:layout_height="@dimen/signin_edittext_height"
            android:layout_marginLeft="@dimen/edittext_padding_left"
            android:layout_marginRight="@dimen/edittext_padding_left"
            android:layout_marginTop="@dimen/edittext_padding_between_signup"
            android:background="@drawable/round_corner"
            android:drawableLeft="@drawable/brand"
            android:drawablePadding="5dp"
            android:hint="@string/car_details_brand"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:textColorHint="@color/hint_color" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/car_details_need_to_verify"
            android:textColor="@android:color/white"
            android:textSize="12sp" />


    </LinearLayout>


    <Button
        android:id="@+id/btn_verification"
        android:layout_width="match_parent"
        android:layout_height="@dimen/signin_edittext_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:background="@drawable/round_corner_gradient"
        android:text="@string/car_details_add_verification"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />

</RelativeLayout>