<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/relativ_add_other_order"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:background="#40000000"
            android:layout_marginBottom="20dp"
            android:layout_above="@+id/rl2">

            <ImageView
                android:id="@+id/imgclose"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/cancel_circle"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/rl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:paddingTop="20dp"
            android:layout_alignParentBottom="true"

            android:orientation="vertical"
            android:background="#373B44">

            <LinearLayout
                android:id="@+id/lnr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/et_street_add"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/signin_edittext_height"
                    android:layout_marginLeft="@dimen/edittext_padding_left"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_corner"
                    android:hint="@string/hint_fname"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_color" />

                <EditText
                    android:id="@+id/et_lname"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/signin_edittext_height"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="@dimen/edittext_padding_left"
                    android:layout_weight="1"
                    android:background="@drawable/round_corner"
                    android:hint="@string/hint_lname"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_color" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_street_add"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signin_edittext_height"
                android:layout_above="@+id/lnr2"
                android:layout_marginLeft="@dimen/edittext_padding_left"
                android:layout_marginRight="@dimen/edittext_padding_left"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_corner"
                android:hint="@string/hint_street_add"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColorHint="@color/hint_color" />

            <LinearLayout
                android:id="@+id/lnr2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/lnr3"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_city"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/signin_edittext_height"
                    android:layout_marginLeft="@dimen/edittext_padding_left"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_corner"
                    android:hint="@string/hint_city"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_color" />

                <EditText
                    android:id="@+id/et_zipcode"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/signin_edittext_height"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="@dimen/edittext_padding_left"
                    android:layout_weight="1"
                    android:background="@drawable/round_corner"
                    android:hint="@string/hint_zipcode"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_color" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnr3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/et_phone"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_state"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/signin_edittext_height"
                    android:layout_marginLeft="@dimen/edittext_padding_left"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_corner"
                    android:hint="@string/hint_state"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_color" />

                <EditText
                    android:id="@+id/et_Country"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/signin_edittext_height"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="@dimen/edittext_padding_left"
                    android:layout_weight="1"
                    android:background="@drawable/round_corner"
                    android:hint="@string/hint_country"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_color" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signin_edittext_height"
                android:layout_above="@+id/btn_place_order"
                android:layout_marginLeft="@dimen/edittext_padding_left"
                android:layout_marginRight="@dimen/edittext_padding_left"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_corner"
                android:hint="@string/hint_Phone_number"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColorHint="@color/hint_color" />



            <Button
                android:id="@+id/btn_place_order"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signin_edittext_height"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="24dp"
                android:background="@drawable/round_corner_gradient"
                android:text="PLACE ORDER"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/relativ_add_other_order"
        android:layout_toEndOf="@+id/relativ_add_other_order">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:minHeight="?actionBarSize"
            app:theme="@style/ToolbarColoredBackArrow"
            app:titleTextColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_shop_product_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="25dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Shops"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_open_cart"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/cart" />
            </LinearLayout>

        </android.support.v7.widget.Toolbar>

        <!--<FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#373B44"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/ivSearchbtn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:text="Back"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_selected_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="Subtotal: "
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$149.00"
                android:textColor="#2DCE9C" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/background_color"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="5dp"
            android:paddingTop="15dp"
            android:text="SELECT DELIVERY ADDRESS"
            android:textColor="#2DCE9C" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <!--<ListView
                    android:id="@+id/grid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:scrollbars="none" />-->
                <com.weedshop.NonScrollListView
                    android:id="@+id/lst_checkout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:divider="@android:color/transparent"
                    android:scrollbars="none" />

                <TextView
                    android:id="@+id/txt_Add_other_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="+ ADD OTHER ADDRESS"
                    android:textColor="#2DCE9C"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btn_signin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/signin_edittext_height"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/round_corner_gradient"
                    android:text="PLACE ORDER"
                    android:textColor="@android:color/white" />
            </LinearLayout>


        </ScrollView>


    </LinearLayout>
</RelativeLayout>